# CyberBase

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  codecov.yml
.github/workflows/: build_cmake.yml
example/: Person.hpp  main.cpp
include/: CyberBase.hpp
include/CyberBase/: Bases.h  Color.hpp  Common.h  Component.h  Error.hpp  Id.h  Kernel.hpp  Length.hpp  Log.hpp  Math.h  Math.hpp  Memory.h  Pipe.hpp  Range.h  TypeId.h  Vector2.hpp  Vector3.hpp  Zero.hpp  hash.h  pointer.h  typeName.h
include/CyberBase/Math/: Length.hpp  MathBase.hpp  Position2.hpp  Position3.hpp  Tuple3.hpp  UnitPrefix.hpp  Vector2.hpp  Vector3.hpp
include/CyberBase/Stream/: StreamDecorator.hpp  StreamFilter.hpp  StreamMap.hpp  StreamVector.hpp
include/CyberBase/TypeSafe/: Length.hpp  Metre.hpp  Position.hpp  TypeSafeBase.hpp  UnitPrefix.hpp
include/CyberBase/Utils/: Tuple3.hpp
src/: Error.cpp  Log.cpp  Memory.cpp  Metre.cpp  Timer.cpp  Vector3.cpp
src/TypeSafe/: Metre.cpp
src/test/: test.cpp  test_Vector2.hpp  test_Vector3.hpp
tests/: CMakeLists.txt  Test_Log.cpp  Test_RangeOfNumber.cpp  Test_TypeId.cpp  Test_component.cpp  Test_id.cpp  Test_math.cpp  Test_memory.cpp  Test_pointer.cpp  Test_typeName.cpp  test_Vector3.cpp
